3588.	[bug]		dig: addressed a memory leak in the sigchase code
			that could cause a shutdown crash.  [RT #33733]

3587.	[func]		'named -g' now checks the logging configuration but
			does not use it. [RT #33473]

3586.	[buf]		Handle errors in xmlDocDumpFormatMemoryEnc. [RT #33706]

3585.	[func]		"rndc delzone -clean" option removes zone files
			when deleting a zone. [RT #33570]

3584.	[security]	Caching data from an incompletely signed zone could
			trigger an assertion failure in resolver.c [RT #33690]

3583.	[bug]		Address memory leak in GSS-API processing [RT #33574]

3582.	[bug]		Silence false positive warning regarding missing file
			directive for inline slave zones.  [RT #33662]

3581.	[bug]		Changed the tcp-listen-queue default to 10. [RT #33029]

3580.	[bug]		Addressed a possible race in acache.c [RT #33602]

3579.	[maint]		Updates to PKCS#11 openssl patches, supporting
			versions 0.9.8y, 1.0.0k, 1.0.1e [RT #33463]

3578.	[bug]		'rndc -c file' now fails if 'file' does not exist.
			[RT #33571]

3577.	[bug]		Handle zero TTL values better. [RT #33411]

3576.	[bug]		Address a shutdown race when validating. [RT #33573]

3575.	[func]		Changed the logging category for RRL events from
			'queries' to 'query-errors'. [RT #33540]

3574.	[doc]		The 'hostname' keyword was missing from server-id
			description in the named.conf man page. [RT #33476]

3573.	[bug]		"rndc addzone" and "rndc delzone" incorrectly handled
			zone names containing punctuation marks and other
			nonstandard characters. [RT #33419]

3572.	[func]		Threads are now enabled by default on most
			operating systems. [RT #25483]

3571.	[bug]		Address race condition in dns_client_startresolve().
			[RT #33234]

3570.	[bug]		Check internal pointers are valid when loading map
			files. [RT #33403]

3569.	[contrib]	Ported mysql DLZ driver to dynamically-loadable
			module, and added multithread support. [RT #33394]

3568.	[cleanup]	Add a product description line to the version file,